--- a/references.bib
+++ b/references.bib
@@ -1610,3 +1610,10 @@ doi = {10.1201/9781420072884-c30}
   institution={SIS-2003-305}
 }
 
+@article{riebler2011kronecker,
+  author     = {Andrea Riebler},
+  title      = {Gaussian Kronecker product Markov random fields},
+  year       = {2011}
+}
+
+
